--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -50,7 +50,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retailindia/jobs/1787295'>Job Application for Analyst- Business Intelligence at Endurance International Group - India</a></h5> 
+<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1787295'>Job Application for Analyst- Business Intelligence at Endurance International Group - India</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -94,7 +94,7 @@ Cover) at Paymentsense.</p>
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Business Intelligence Analyst at Verve.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fooda.applytojob.com/apply/AeXbGSCmMn/Business-Intelligence-Analyst'>Business Intelligence Analyst - Fooda - Career Page</a></h5> 
+<h5><a href='http://fooda.applytojob.com/apply/AeXbGSCmMn/Business-Intelligence-Analyst'>Business Intelligence Analyst - Fooda - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -197,7 +197,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BrainspireSolutions/743999686600280-manager-director-of-business-intelligence'>Brainspire Solutions Manager/Director of Business Intelligence | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BrainspireSolutions/743999686600280-manager-director-of-business-intelligence'>Brainspire Solutions Manager/Director of Business Intelligence | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -255,11 +255,11 @@ in Herten (published: 12.07.2019). Apply now or check the other available jobs.<
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/sojern/jobs/business-intelligence-analyst-bnMASIQKWr6ApraKkRyNN8'>Business Intelligence Analyst #1067 job at Sojern in Omaha, NE, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/sojern/jobs/business-intelligence-analyst-bnMASIQKWr6ApraKkRyNN8'>Business Intelligence Analyst #1067 job at Sojern in Omaha, NE, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/mavenlink/job/oXByafw0'>Mavenlink Careers - Business Intelligence Consultant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/mavenlink/job/oXByafw0'>Mavenlink Careers - Business Intelligence Consultant</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Today's leading companies are able to transform their data into insights and 
 strategic decisions that drive growth. The Business Intelligence team at 
@@ -298,7 +298,7 @@ one of the fastest growing fields within MediaCom and focuses on (1) providing?.
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/StrategicInsight/743999687263031-associate-business-intelligence-and-strategy-asset-management'>Strategic Insight Associate, Business Intelligence and Strategy - Asset Management | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/StrategicInsight/743999687263031-associate-business-intelligence-and-strategy-asset-management'>Strategic Insight Associate, Business Intelligence and Strategy - Asset Management | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -334,7 +334,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/arcadia/jobs/4362162002'>Job Application for Healthcare Business Intelligence Analyst at Arcadia.io</a></h5> 
+<h5><a href='https://boards.greenhouse.io/arcadia/jobs/4362162002'>Job Application for Healthcare Business Intelligence Analyst at Arcadia.io</a></h5> 
 <p><span class="badge badge-light">Rockford</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -396,7 +396,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/guildeducation/jobs/1778090'>Job Application for Senior Business Intelligence Analyst - Partnerships at Guild Education</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/guildeducation/jobs/1778090'>Job Application for Senior Business Intelligence Analyst - Partnerships at Guild Education</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -416,7 +416,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kfit/e16df70c-8e03-4c63-92e5-d141dd074ff0'>Fave - Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/kfit/e16df70c-8e03-4c63-92e5-d141dd074ff0'>Fave - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -474,7 +474,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
